STYLE[#40]-Fix the dark mode by adding css variables on Home, Farmer, Recipe pages

--- a/apps/GABOR45/src/theme/variables.css
+++ b/apps/GABOR45/src/theme/variables.css
@@ -25,7 +25,8 @@ http://ionicframework.com/docs/theming/ */
   --ion-color-secondary-tint: #50c8ff;
 
   /** tertiary **/
-  --ion-color-tertiary: #5260ff;
+  --ion-color-tertiary: #F1F1F1;
+  --ion-color-tertiary-card: #FFFFFF;
   --ion-color-tertiary-rgb: 82, 96, 255;
   --ion-color-tertiary-contrast: #ffffff;
   --ion-color-tertiary-contrast-rgb: 255, 255, 255;
@@ -96,17 +97,21 @@ http://ionicframework.com/docs/theming/ */
     --ion-color-primary-contrast: #f6fcfb;
     --ion-color-primary-contrast-rgb: 255,255,255;
     --ion-color-primary-shade: #3a7be0;
-    --ion-color-primary-tint: #e4e4e4;
+    --ion-color-primary-tint: #e4e4e4 ;
     --ion-color-facebook: #2b5c93;
 
-    --ion-color-secondary: #121212;
+    --ion-tab-bar-background: #1c1c1d; /* navbar background color */
+
+
+    --ion-color-secondary: #1c1c1d;
     --ion-color-secondary-rgb: 80,200,255;
     --ion-color-secondary-contrast: #e4e4e4;
     --ion-color-secondary-contrast-rgb: 255,255,255;
     --ion-color-secondary-shade: #121212;
     --ion-color-secondary-tint: #121212;
 
-    --ion-color-tertiary: #6a64ff;
+    --ion-color-tertiary: #1c1c1d;
+    --ion-color-tertiary-card: #2d2d2e;
     --ion-color-tertiary-rgb: 106,100,255;
     --ion-color-tertiary-contrast: #ffffff;
     --ion-color-tertiary-contrast-rgb: 255,255,255;
@@ -162,7 +167,7 @@ http://ionicframework.com/docs/theming/ */
    */
 
   .ios body {
-    --ion-background-color: #000000;
+    --ion-background-color: #2c2c2c;
     --ion-background-color-rgb: 0,0,0;
 
     --ion-text-color: #ffffff;
@@ -188,7 +193,7 @@ http://ionicframework.com/docs/theming/ */
     --ion-color-step-900: #e6e6e6;
     --ion-color-step-950: #f2f2f2;
 
-    --ion-item-background: #000000;
+    --ion-item-background: #2c2c2c;
 
     --ion-card-background: #1c1c1d;
   }
